fixing horizontal scroll

--- a/bootstrap-practice/css/style.css
+++ b/bootstrap-practice/css/style.css
@@ -1,7 +1,12 @@
-.container{
-    width: 100%;
-    height: 100%;
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
+
+/*.container{*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*}*/
 
 .nav-container {
     position: fixed;
